fazendo upload de imgs

--- a/src/components/New/new.css
+++ b/src/components/New/new.css
@@ -33,6 +33,18 @@ form#new-post span{
   color: #ff0000;
   font-size: 15px;
 }
+form#new-post label{
+  margin-bottom: 15px;
+}
+form#new-post img{
+  width: 200px;
+  height: 100px;
+  margin-bottom: 15px;
+}
+form#new-post progress{
+  margin-bottom: 15px;
+ 
+}
 form#new-post input[type="text"]{
   height: 40px;
   border-radius: 4px;
