--- a/src/components/Dashboard/dashboard.css
+++ b/src/components/Dashboard/dashboard.css
@@ -3,20 +3,48 @@ div#dashboard{
   max-width: 930px;
   margin: 20px auto;
   padding: 0 30px;
+  display: flex;
+  
+  flex-direction: column;
 }
 div#dashboard .user-info{
   display: flex;
-  height: 30px;
   align-items: center;
+  justify-content: space-around;
+  height: 30px;
 }
+/* .link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
 div#dashboard .user-info a{
-  padding: 8px;
+  padding: 5px;
   border-radius: 4px;
   font-size: 20px;
   background-color: rgba(211, 211, 40, 0.692);
   color: #fff;
-  padding-right: 18px;
   text-decoration: none;
+}
+div#dashboard p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 40px;
+}
+div#dashboard button{
+  width: 100px;
+  height: 40px;
+  padding: 5px;
+  margin-top: 40px;
+  background-color: #272727;
+  color: #fff;
+  border-radius: 4px;
+  font-size: 18px;
+  align-items:center;
+  justify-content: center;
 }
 
