--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -25,6 +25,7 @@ section#post article header .title span {
 }
 section#post article > img{
   width: 100%;
+  max-height: 539px;
 }
 section#post article footer{
   padding: 20px;
